--- a/public/index.html
+++ b/public/index.html
@@ -70,12 +70,12 @@
       class="flex-center logo-wrapper header-center"
     >
       <img class="logo" src="uv.png" alt="Ultraviolet" />
-      <h1>Ultraviolet | TN</h1>
+      <h1>Schoolarly</h1>
     </div>
     <div class="flex-center desc left-margin">
       <p>
-        Ultraviolet is highly sophisticated proxy used for evading internet
-        censorship.
+        Schoolarly is your ultimate learning platform providing comprehensive
+        study resources and educational support.
       </p>
     </div>
 
