Fix script loading order for BareMux and Ultraviolet dependencies

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <script src="uv/uv.config.js" defer></script>
     <script src="register-sw.js" defer></script>
     <script src="search.js" defer></script>
-    <script src="index.js" defer></script>
+    <script src="index.js"></script>
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
